--- a/Blog.css
+++ b/Blog.css
@@ -59,7 +59,7 @@ pre code.hljs * {
 
 #my-container ul li {
   padding-left: 2rem;
-  background-image: url(static/img79.svg);
+  background-image: url("static/img79.svg");
   background-position: 0 0;
   background-size: 2rem 2rem;
   background-repeat: no-repeat;
@@ -76,7 +76,7 @@ li::marker {
   border-image-width: 20px 20px 20px 20px;
   border-image-outset: 0 0 3vh 0;
   border-image-repeat: stretch stretch;
-  border-image-source: url("static/dividing line.svg");
+  border-image-source: url('static/dividing line.svg');
   border-style: solid;
 }
 @font-face {
