--- a/index.css
+++ b/index.css
@@ -50,5 +50,9 @@
 
 .item {
   text-decoration: none;
-  /*height: 33%;*/
+  height: fit-content;
+  filter: drop-shadow( 1.5px  0px 0px black) 
+          drop-shadow(-1.5px  0px 0px black)
+          drop-shadow( 0px  1.5px 0px black) 
+          drop-shadow( 0px -1.5px 0px black);
 }
