--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
   height: 69.8%;
   display: grid;
   gap: 1%;
-  grid-template-columns: repeat(auto-fill, minmax(1fr 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(32%, 1fr));
   grid-template-rows: masonry;
   padding-top: 24%;
   padding-left: 8%;
@@ -29,8 +29,8 @@
 }
 
 .artImage {
-  max-width: 98%;
-  max-height: 98%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .paper {
