--- a/Shop.css
+++ b/Shop.css
@@ -46,12 +46,23 @@
 /*.Description {
   font-family: 'Economica', monospace;
 }*/
-.Name, .Description, .Price, .Buy {
-  text-decoration: none;
+.Name, .Description, .Price {
   background-color: white;
   border-radius: 255px 50px 225px 50px/50px 225px 50px 255px;
   border-color: black;
   border-bottom-style: solid;
   border-width: 1%;
   padding-left: 3%;
+}
+.Buy {
+  background-color: black;
+  border-radius: 255px 50px 225px 50px/50px 225px 50px 255px;
+  border-color: white;
+  border-bottom-style: solid;
+  border-width: 1%;
+  padding-left: 3%;
+}
+.buyLink {
+  text-decoration: none;
+  color: white;
 }
