--- a/Shop.css
+++ b/Shop.css
@@ -61,6 +61,8 @@
   border-bottom-style: solid;
   border-width: 1%;
   padding-left: 3%;
+  padding-top: 4%;
+  padding-bottom: 4%;
 }
 .buyLink {
   text-decoration: none;
