--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body::-webkit-scrollbar-thumb {
   background: rgba(255, 255, 255, 0.4);
   top: 0;
   width: 90%;
+  z-index: 3;
 }
 .Tab {
   display: inline-block;
