--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@
   display: grid;
   gap: 1%;
   grid-template-columns: repeat(auto-fill, minmax(32%, 1fr));
+  grid-template-rows: masonry;
   padding-top: 19%;
   padding-left: 6%;
   padding-right: 6%;
