--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@
   gap: 1%;
   grid-template-columns: repeat(auto-fill, minmax(32%, 1fr));
   grid-template-rows: masonry;
-  padding-top: 19%;
+  padding-top: 19.5%;
   padding-left: 6%;
   padding-right: 6%;
   padding-bottom: 6%;
@@ -30,7 +30,7 @@
 }
 
 .artImage {
-  max-width: 100%;
+  width: 100%;
   max-height: 100%;
 }
 
@@ -55,6 +55,24 @@
 }
 
 .item {
+  text-decoration: none;
+  height: fit-content;
+  filter: drop-shadow( 1.5px  0px 0px black) 
+          drop-shadow(-1.5px  0px 0px black)
+          drop-shadow( 0px  1.5px 0px black) 
+          drop-shadow( 0px -1.5px 0px black);
+}
+.item1 {
+  transform: rotate(9deg);
+  text-decoration: none;
+  height: fit-content;
+  filter: drop-shadow( 1.5px  0px 0px black) 
+          drop-shadow(-1.5px  0px 0px black)
+          drop-shadow( 0px  1.5px 0px black) 
+          drop-shadow( 0px -1.5px 0px black);
+}
+.item2 {
+  transform: rotate(-12deg);
   text-decoration: none;
   height: fit-content;
   filter: drop-shadow( 1.5px  0px 0px black) 
