--- a/style.css
+++ b/style.css
@@ -22,11 +22,11 @@
     font-display: swap;
 }
 
-.Name {
+/*.Name {
 
 }
 .left {
-}
+}*/
 .ImgGraphic {
   display: flex;
   justify-content: center;
